--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -8,6 +8,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: absolute;
+    cursor: move;
+    transition: transform 0.5s ease;
 }
 /*Container for search bar*/
 .search-bar
