--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,6 @@
 {
   min-height: 100vh;
   display: grid;
-  background: url('./assets/weatherBackground.png') no-repeat center center;
+  background: url('./assets/SKYWATCHERS.png') no-repeat center center;
   background-size: cover;
 }
